--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
 
-    <h1>Welcome to Mini Finance-Your budgeting Partner</h1>
+    <h1>Welcome to Mini mini Finance-Your budgeting Partner</h1>
 </body>
 </html>
 
